[gd_scene load_steps=4 format=3 uid="uid://ctfgg0udfa2jc"]

[ext_resource type="Script" path="res://game/action_button.gd" id="1_mulkx"]
[ext_resource type="Texture2D" uid="uid://baqu6hrmxcf0y" path="res://game/dice/pi/pi.png" id="5_omg10"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sttam"]
bg_color = Color(0.054902, 0.054902, 0.054902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.894118, 0.894118, 0.894118, 1)

[node name="ActionButton" type="Button"]
offset_right = 40.0
offset_bottom = 40.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_sttam")
script = ExtResource("1_mulkx")

[node name="IconTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 53.0
offset_bottom = 53.0
mouse_filter = 2
texture = ExtResource("5_omg10")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
